lepus-dev-pod.yaml
apiVersion: v1
kind: Pod
metadata:
  name: lepus-dev
  namespace: provider
  labels:
    app: lepus
spec:
  containers:
    - name: lepus
      image: node:20
      command: ["/bin/sh", "-c"]
      args:
        - |
          git clone https://github.com/CitComAI-Hub/lepus.git /lepus && \
          cd /lepus && \
          npm install && \
          npm start
      ports:
        - containerPort: 3000
---
apiVersion: v1
kind: Service
metadata:
  name: lepus-dev
  namespace: provider
spec:
  selector:
    app: lepus
  ports:
    - protocol: TCP
      port: 3000
      targetPort: 3000
  type: ClusterIP
